# RepoAnalyzer

./: .coveragerc  .cursorignore  .gitignore  README.md  comprehensive_error_boundary_fix.py  config.py  index.py  integration_summary.md  pytest.ini  requirements.txt  test_integration_indexer.py  test_parsers.py  update_parsers.py
ai_tools/: README.MD  __init__.py  ai_interface.py  ai_interface.py.bak  code_understanding.py  graph_capabilities.py  graph_capabilities.py.bak  pattern_integration.py  reference_repository_learning.py  rule_config.py
ai_tools_docs/: README.md  __init__.py  ai_interface.md  code_understanding.md  graph_capabilities.md  graph_capabilities.py  reference_repository_learning.md
config/: __init__.py  (+1 more)
tests/test_parse/data/: .editorconfig  .gitignore  BUILD  CMakeLists.txt  README.MD  Service.java  User.h  User.m  ai_interface.md  app.js  component.tsx  config.toml  function_queries.yml  inspect_ast.py  known_structures.json  requirements.txt  sample.adb  sample.asm  sample.bib  sample.c  sample.clj  sample.cob  sample.cpp  sample.cs  sample.dart  sample.el  sample.elm  sample.erl  sample.ex  sample.f90  sample.fish  sample.gd  sample.gleam  sample.groovy  sample.hack  sample.hs  sample.html  sample.hx  sample.jl  sample.kt  (+34 more)
tests/test_parse/data/malformed/: incomplete_block.js  invalid_syntax.py  invalid_utf8.py  mixed_encoding.py  truncated.cpp
tests/test_parse/data/patterns/: semantics_test.cpp  semantics_test.js  semantics_test.py  semantics_test.ts  syntax_test.py
tests/test_parse/data/sample_project/src/: main.py  user-service.js
(+318 files in other folders)
